[backend] Add abstract entity classes and interfaces, core entity to extend to all specific business cases